--- a/German/main/BarcodeScanner.apk/res/values-de/strings.xml
+++ b/German/main/BarcodeScanner.apk/res/values-de/strings.xml
@@ -1,80 +1,80 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="app_name">Scanner</string>
-    <string name="copy">Copy</string>
-    <string name="name">Name:</string>
-    <string name="nickname">Nickname:</string>
-    <string name="company">Company:</string>
-    <string name="title">Title:</string>
-    <string name="phone">Phone:</string>
-    <string name="email">Email:</string>
-    <string name="web">Web:</string>
-    <string name="address">Address:</string>
-    <string name="birthday">Birthday:</string>
-    <string name="note">Note:</string>
-    <string name="add_to_contacts">Add to contacts</string>
-    <string name="recognize">Read</string>
-    <string name="recognize_fail">"Couldn't read"</string>
-    <string name="place_barcode_into_rectangle">To scan, align the code in the frame below</string>
-    <string name="barcode_into_rectangle">To scan, align the code in the frame below</string>
-    <string name="open_flash_error">"Can't turn on torch"</string>
-    <string name="close_flash_error">"Can't turn off torch"</string>
-    <string name="scan_fail">"Couldn't scan"</string>
-    <string name="vcard_prompt">"Can't add to contacts because there is no name associated with this card."</string>
-    <string name="copy_succeed">Copied</string>
-    <string name="fail_generate_barcode">"Couldn't create code"</string>
-    <string name="scan_result">Scan result</string>
-    <string name="flash_lable">Torch</string>
-    <string name="picker_lable">Picture</string>
-    <string name="camera_error">"There's something wrong with the camera"</string>
-    <string name="url_is_safety">This website is safe.</string>
-    <string name="url_is_unsafety">"This site poses a risk to your userdata's security."</string>
-    <string name="url_is_phish">This website has been suspected of data phishing (yikes!).</string>
-    <string name="url_is_unknown">"Can't confirm if this site is safe. Browse at your own risk."</string>
-    <string name="scan_qrcode">Scan QR code</string>
-    <string name="app_details">App details:</string>
-    <string name="website_details">Website details:</string>
-    <string name="contact_details">Contact details:</string>
-    <string name="wechat_details">WeChat details:</string>
-    <string name="qr_code_details">QR code details:</string>
-    <string name="import_contact">Import contact</string>
-    <string name="secure_access_web_url">Secure access</string>
-    <string name="not_recommend_access_web_url">Secure access (not recommended)</string>
-    <string name="continue_access_web_url">Secure access</string>
-    <string name="download_by_browser">Download with Browser</string>
-    <string name="launch_market">Launch Mi Market</string>
-    <string name="launch_wechat">Launch WeChat</string>
-    <string name="download_wechat">Download WeChat</string>
-    <string name="see_app_details">View app details</string>
-    <string name="copy_text">Copy text</string>
-    <string name="copy_text_success">Copy success</string>
-    <string name="success_message_import_from_account">Imported</string>
-    <string name="web_url_warning">The linked website is from an unknown source and may be a security risk.</string>
-    <string name="web_url_apk_warning">This app is from an unknown source and may be a security risk. We recommend that you only install apps from trusted sources.</string>
-    <string name="wifi_ssid">SSID:</string>
-    <string name="wifi_pwd">Password:</string>
-    <string name="wifi_security">Security:</string>
-    <string name="wifi_details">WLAN details:</string>
-    <string name="connect_wifi">Connect to this network</string>
-    <string name="qq_details">QQ details:</string>
-    <string name="launch_qq">Launch QQ in Browser</string>
-    <string name="download_qq">Download QQ</string>
-    <string name="wifi_warning">Before you connect, make sure this network is secure.</string>
-    <string name="cloud_album_details">Cloud album details:</string>
-    <string name="visit_cloud_album">Visit cloud album</string>
-    <string name="find_cloud_album">Scan a cloud album QR code</string>
-    <string name="wifi_connecting">Connecting…</string>
-    <string name="wifi_open_fail">"Couldn't open WLAN"</string>
-    <string name="wifi_connect_fail">"Can't connect to the network"</string>
-    <string name="wifi_connect_success">Connected</string>
-    <string name="wifi_connect_not_found">No WLAN networks detected</string>
-    <string name="wifi_connect_current_connetion">Connected to WLAN</string>
-    <string name="back">Back</string>
-    <string name="allow_check_website_security">Make sure websites are safe before connecting</string>
-    <string name="accept">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="tips_message">"You need to connect to the internet to check if the website you're about to visit is safe."</string>
-    <string name="tips_title">Internet connection</string>
-    <string name="not_tips">"Don't show again"</string>
-	<string name="settings">Settings</string>
-</resources>
+  <?xml version="1.0" encoding="utf-8" ?> 
+- <resources>
+  <string name="app_name">Scanner</string> 
+  <string name="copy">Kopieren</string> 
+  <string name="name">Name:</string> 
+  <string name="nickname">Nickname:</string> 
+  <string name="company">Firma:</string> 
+  <string name="title">Titel:</string> 
+  <string name="phone">Telefonnummer:</string> 
+  <string name="email">Email:</string> 
+  <string name="web">Webseite:</string> 
+  <string name="address">Addresse:</string> 
+  <string name="birthday">Geburtstag:</string> 
+  <string name="note">Notiz:</string> 
+  <string name="add_to_contacts">Zu Kontakten hinzufügen</string> 
+  <string name="recognize">Lesen</string> 
+  <string name="recognize_fail">"Konnte nicht lesen"</string> 
+  <string name="place_barcode_into_rectangle">Platziere den Code in dem Rahmen um ihn zu scannen</string> 
+  <string name="barcode_into_rectangle">Platziere den Code in dem Rahmen um ihn zu scannen</string> 
+  <string name="open_flash_error">"Taschenlampe kann nicht angeschaltet werden"</string> 
+  <string name="close_flash_error">"Taschenlampe kann nicht ausgeschaltet werden"</string> 
+  <string name="scan_fail">"Es konnte nicht gescannt werden"</string> 
+  <string name="vcard_prompt">"Diese Karte kann nicht zu den Kontakten hinzugefügt werden, weil kein Name mit ihr verknüpft ist."</string> 
+  <string name="copy_succeed">Kopiert</string> 
+  <string name="fail_generate_barcode">"Es konnte kein Code erstellt werden"</string> 
+  <string name="scan_result">Scan Ergebnis</string> 
+  <string name="flash_lable">Taschenlampe</string> 
+  <string name="picker_lable">Bild</string> 
+  <string name="camera_error">"Es stimmt etwas mit der Kamera nicht"</string> 
+  <string name="url_is_safety">Diese Webseite ist sicher.</string> 
+  <string name="url_is_unsafety">"Diese Seite stellt ein Risiko für die Sicherheit ihrer Benutzerdaten dar."</string> 
+  <string name="url_is_phish">Diese Webseite steht unter verdacht von Daten Phishing(yikes!).</string> 
+  <string name="url_is_unknown">"Es kann nicht bestätigt werden, dass diese Seite sicher ist. Du surfst auf eigene Verantwortung."</string> 
+  <string name="scan_qrcode">QR Code scannen</string> 
+  <string name="app_details">App Details:</string> 
+  <string name="website_details">Webseiten Details:</string> 
+  <string name="contact_details">Kontakt Details:</string> 
+  <string name="wechat_details">WeChat Details:</string> 
+  <string name="qr_code_details">QR code Details:</string> 
+  <string name="import_contact">Kontakt importieren</string> 
+  <string name="secure_access_web_url">Sicherer Zugriff</string> 
+  <string name="not_recommend_access_web_url">Sicherer Zugriff (not recommended)</string> 
+  <string name="continue_access_web_url">Sicherer Zugriff</string> 
+  <string name="download_by_browser">Mit dem Browser herunterladen</string> 
+  <string name="launch_market">Mi Market öffnen</string> 
+  <string name="launch_wechat">WeChat öffnen</string> 
+  <string name="download_wechat">WeChat herunterladen</string> 
+  <string name="see_app_details">App Details ansehen</string> 
+  <string name="copy_text">Text kopieren</string> 
+  <string name="copy_text_success">Erfolgreich kopiert</string> 
+  <string name="success_message_import_from_account">Importiert</string> 
+  <string name="web_url_warning">Die verlinkte Webseite stammt aus einer unbekannten Quelle und und könnte ein Sicherheitsrisiko darstellen.</string> 
+  <string name="web_url_apk_warning">Diese App stammt aus einer unbekannten Quelle und jönnte ein Sicherheitsrisiko darstellen. Wir empfehlen nur Apps aus vertrauten Quellen zu installieren.</string> 
+  <string name="wifi_ssid">SSID:</string> 
+  <string name="wifi_pwd">Passwort:</string> 
+  <string name="wifi_security">Sicherheit:</string> 
+  <string name="wifi_details">WLAN Details:</string> 
+  <string name="connect_wifi">Mit siesem Netzwerk verbinden</string> 
+  <string name="qq_details">QQ Details:</string> 
+  <string name="launch_qq">QQ im Browser öffnen</string> 
+  <string name="download_qq">QQ herunterladen</string> 
+  <string name="wifi_warning">Bevor du dich verbindest, vergewissere dich, dass dieses Netzwerk sicher ist.</string> 
+  <string name="cloud_album_details">Cloud Album Details:</string> 
+  <string name="visit_cloud_album">Cloud Album besuchen</string> 
+  <string name="find_cloud_album">Cloud Album QR Code scannen</string> 
+  <string name="wifi_connecting">Verbinden…</string> 
+  <string name="wifi_open_fail">"WLAN konnte nicht geöffnet werden"</string> 
+  <string name="wifi_connect_fail">"Netzwerkverbindung konnte nicht hergestellt werden"</string> 
+  <string name="wifi_connect_success">Verbunden</string> 
+  <string name="wifi_connect_not_found">Keine WLAN-Netzwerke gefunden</string> 
+  <string name="wifi_connect_current_connetion">Mit WLAN verbunden</string> 
+  <string name="back">Zurück</string> 
+  <string name="allow_check_website_security">Vergewissere dich vor dem Verbinden, dass die Webseiten sicher sind</string> 
+  <string name="accept">OK</string> 
+  <string name="cancel">Abbrechen</string> 
+  <string name="tips_message">"Du musst dich mit dem Internet verbinden um zu überprüfen ob die Webseite, die du besuchen möchtest, sicher ist."</string> 
+  <string name="tips_title">Internetverbindung</string> 
+  <string name="not_tips">"Nicht erneut Anzeigen"</string> 
+  <string name="settings">Einstellungen</string> 
+  </resources>
